team-modal overflow bugfix

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -70,6 +70,7 @@
   top: 50%;
   left: 50%;
   z-index: 1000;
+  overflow: auto;
 
   width: 90vw;
   height: 90vh;
